# hex-magical

./: .gitignore  CMakeLists.txt  Makefile.web  README.md  makefile
.github/workflows/: build_linux.yml  build_macos.yml  build_webassembly.yml  build_windows.yml  hex-magical-cicd.yml
projects/VS2022/raylib_game/: raylib_game.vcxproj
resources/: hex-magical-test.tiled-project  hex-magical-test.tiled-session  map-12.tmx  map-16.tmx  map-2.tmx  map-3.tmx  map-4.tmx  map-5.tmx  map-6.tmx  map-7.tmx  map-9.tmx  map-template.tmx  project-v2.tiled-session  tile-map.tmx  tileset.aseprite  tileset.tsx
resources/act-1/: map-10.tmx  map-11.tmx  map-16.tmx  map-2.tmx  map-8.tmx  tileset.aseprite  tileset.tsx
resources/act-2/: bricks-small.tsx  cave-02.tmx  cave.tsx  map-mountain-01.tmx  overworld-01.tmx  overworld_autotiles.aseprite  tileset.tsx
resources/background/: images.tsx
resources/rules/: auto-tile-rules.tmx  rules.txt
resources/solutions/: map-12.solution  map-2.solution  map-3.solution  map-4.solution  map-5.solution  map-8.solution  tile-map.solution
resources/tilesets/: mountain.tsx  resources.txt
src/: Makefile  admin.c  admin.h  game.c  game.h  levels.h  main.c  physics.c  physics.h  platform.c  platform.h  render.c  render.h  shell.html  sketch.c  sketch.h  solution.c  solution.h  tiled.c  tiled.h
src/platform/: Info.plist  shell.html  web_storage.js
tests/: level_tests.c
